src/parser/WDL/antlr4/draft-1/WdlDraft1Parser.js
// Generated from ./WdlDraft1Parser.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import WdlDraft1ParserListener from './WdlDraft1ParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class WdlDraft1Parser extends antlr4.Parser {

    static grammarFileName = "WdlDraft1Parser.g4";
    static literalNames = [ null, null, "'version draft-1'", "'import'", 
                            "'workflow'", "'task'", "'struct'", "'scatter'", 
                            "'while'", "'call'", "'if'", "'then'", "'else'", 
                            "'alias'", "'as'", "'in'", "'input'", "'output'", 
                            "'parameter_meta'", "'meta'", "'command'", "'runtime'", 
                            "'Boolean'", "'Int'", "'Float'", "'String'", 
                            "'File'", "'Array'", "'Map'", "'Pair'", "'Object'", 
                            "'object'", "'sep'", "'default'", null, null, 
                            null, "'('", "')'", null, null, "'['", null, 
                            "'\\'", null, "'<'", "'>'", "'>='", "'<='", 
                            "'=='", "'!='", "'='", "'&&'", "'||'", "'?'", 
                            "'*'", "'+'", "'-'", null, null, "';'", "'.'", 
                            "'!'", null, "'/'", "'%'", null, null, null, 
                            null, null, null, "'<<<'", null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, "'null'", 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, "'\\>>>'" ];
    static symbolicNames = [ null, "LINE_COMMENT", "VERSION", "IMPORT", 
                             "WORKFLOW", "TASK", "STRUCT", "SCATTER", "WHILE", 
                             "CALL", "IF", "THEN", "ELSE", "ALIAS", "AS", 
                             "In", "INPUT", "OUTPUT", "PARAMETERMETA", "META", 
                             "COMMAND", "RUNTIME", "BOOLEAN", "INT", "FLOAT", 
                             "STRING", "FILE", "ARRAY", "MAP", "PAIR", "OBJECT", 
                             "OBJECT_LITERAL", "SEP", "DEFAULT", "IntLiteral", 
                             "FloatLiteral", "BoolLiteral", "LPAREN", "RPAREN", 
                             "LBRACE", "RBRACE", "LBRACK", "RBRACK", "ESC", 
                             "COLON", "LT", "GT", "GTE", "LTE", "EQUALITY", 
                             "NOTEQUAL", "EQUAL", "AND", "OR", "OPTIONAL", 
                             "STAR", "PLUS", "MINUS", "DOLLAR", "COMMA", 
                             "SEMI", "DOT", "NOT", "TILDE", "DIVIDE", "MOD", 
                             "SQUOTE", "DQUOTE", "WHITESPACE", "Identifier", 
                             "StringPart", "BeginWhitespace", "BeginHereDoc", 
                             "BeginLBrace", "HereDocUnicodeEscape", "CommandUnicodeEscape", 
                             "StringCommandStart", "EndCommand", "CommandStringPart", 
                             "BeginMeta", "MetaWhitespace", "MetaBodyComment", 
                             "MetaIdentifier", "MetaColon", "EndMeta", "MetaBodyWhitespace", 
                             "MetaValueComment", "MetaBool", "MetaInt", 
                             "MetaFloat", "MetaNull", "MetaSquote", "MetaDquote", 
                             "MetaEmptyObject", "MetaEmptyArray", "MetaLbrack", 
                             "MetaLbrace", "MetaValueWhitespace", "MetaStringPart", 
                             "MetaArrayComment", "MetaArrayCommaRbrack", 
                             "MetaArrayComma", "MetaRbrack", "MetaArrayWhitespace", 
                             "MetaObjectComment", "MetaObjectIdentifier", 
                             "MetaObjectColon", "MetaObjectCommaRbrace", 
                             "MetaObjectComma", "MetaRbrace", "MetaObjectWhitespace", 
                             "HereDocEscapedEnd" ];
    static ruleNames = [ "map_type", "array_type", "pair_type", "type_base", 
                         "wdl_type", "unbound_decls", "bound_decls", "any_decls", 
                         "primitive_literal", "expr", "expr_infix", "expr_infix0", 
                         "expr_infix1", "expr_infix2", "expr_infix3", "expr_infix4", 
                         "expr_infix5", "expr_core", "number", "expression_placeholder_option", 
                         "string_part", "string_expr_part", "string_expr_with_string_part", 
                         "string", "import_as", "import_doc", "task_output", 
                         "task_command_string_part", "task_command_expr_part", 
                         "task_command_expr_with_string", "task_command", 
                         "task_runtime_kv", "task_runtime", "meta_value", 
                         "meta_string_part", "meta_string", "meta_array", 
                         "meta_object", "meta_object_kv", "meta_kv", "parameter_meta", 
                         "meta", "task_element", "task", "call_alias", "call_input", 
                         "call_inputs", "call_body", "call_name", "call", 
                         "scatter", "conditional", "loop", "inner_workflow_element", 
                         "workflow_output_fqn_part", "workflow_output_fqn", 
                         "workflow_output", "workflow_element", "workflow", 
                         "document_element", "document" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = WdlDraft1Parser.ruleNames;
        this.literalNames = WdlDraft1Parser.literalNames;
        this.symbolicNames = WdlDraft1Parser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 11:
    	    		return this.expr_infix0_sempred(localctx, predIndex);
    	case 12:
    	    		return this.expr_infix1_sempred(localctx, predIndex);
    	case 13:
    	    		return this.expr_infix2_sempred(localctx, predIndex);
    	case 14:
    	    		return this.expr_infix3_sempred(localctx, predIndex);
    	case 15:
    	    		return this.expr_infix4_sempred(localctx, predIndex);
    	case 17:
    	    		return this.expr_core_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_infix0_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix1_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix2_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 5);
    		case 5:
    			return this.precpred(this._ctx, 4);
    		case 6:
    			return this.precpred(this._ctx, 3);
    		case 7:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix3_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 8:
    			return this.precpred(this._ctx, 3);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_infix4_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 10:
    			return this.precpred(this._ctx, 4);
    		case 11:
    			return this.precpred(this._ctx, 3);
    		case 12:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_core_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 13:
    			return this.precpred(this._ctx, 6);
    		case 14:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	map_type() {
	    let localctx = new Map_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, WdlDraft1Parser.RULE_map_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(WdlDraft1Parser.MAP);
	        this.state = 123;
	        this.match(WdlDraft1Parser.LBRACK);
	        this.state = 124;
	        this.wdl_type();
	        this.state = 125;
	        this.match(WdlDraft1Parser.COMMA);
	        this.state = 126;
	        this.wdl_type();
	        this.state = 127;
	        this.match(WdlDraft1Parser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array_type() {
	    let localctx = new Array_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, WdlDraft1Parser.RULE_array_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(WdlDraft1Parser.ARRAY);
	        this.state = 130;
	        this.match(WdlDraft1Parser.LBRACK);
	        this.state = 131;
	        this.wdl_type();
	        this.state = 132;
	        this.match(WdlDraft1Parser.RBRACK);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===56) {
	            this.state = 133;
	            this.match(WdlDraft1Parser.PLUS);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pair_type() {
	    let localctx = new Pair_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, WdlDraft1Parser.RULE_pair_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(WdlDraft1Parser.PAIR);
	        this.state = 137;
	        this.match(WdlDraft1Parser.LBRACK);
	        this.state = 138;
	        this.wdl_type();
	        this.state = 139;
	        this.match(WdlDraft1Parser.COMMA);
	        this.state = 140;
	        this.wdl_type();
	        this.state = 141;
	        this.match(WdlDraft1Parser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type_base() {
	    let localctx = new Type_baseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, WdlDraft1Parser.RULE_type_base);
	    var _la = 0;
	    try {
	        this.state = 147;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 27:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 143;
	            this.array_type();
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 144;
	            this.map_type();
	            break;
	        case 29:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 145;
	            this.pair_type();
	            break;
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 30:
	        case 69:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 146;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1203765248) !== 0) || _la===69)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wdl_type() {
	    let localctx = new Wdl_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, WdlDraft1Parser.RULE_wdl_type);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 149;
	            this.type_base();
	            this.state = 150;
	            this.match(WdlDraft1Parser.OPTIONAL);
	            break;

	        case 2:
	            this.state = 152;
	            this.type_base();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unbound_decls() {
	    let localctx = new Unbound_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, WdlDraft1Parser.RULE_unbound_decls);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.wdl_type();
	        this.state = 156;
	        this.match(WdlDraft1Parser.Identifier);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bound_decls() {
	    let localctx = new Bound_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, WdlDraft1Parser.RULE_bound_decls);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.wdl_type();
	        this.state = 159;
	        this.match(WdlDraft1Parser.Identifier);
	        this.state = 160;
	        this.match(WdlDraft1Parser.EQUAL);
	        this.state = 161;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	any_decls() {
	    let localctx = new Any_declsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, WdlDraft1Parser.RULE_any_decls);
	    try {
	        this.state = 165;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 163;
	            this.unbound_decls();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 164;
	            this.bound_decls();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primitive_literal() {
	    let localctx = new Primitive_literalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, WdlDraft1Parser.RULE_primitive_literal);
	    try {
	        this.state = 171;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 36:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 167;
	            this.match(WdlDraft1Parser.BoolLiteral);
	            break;
	        case 34:
	        case 35:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 168;
	            this.number();
	            break;
	        case 66:
	        case 67:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 169;
	            this.string();
	            break;
	        case 69:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 170;
	            this.match(WdlDraft1Parser.Identifier);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, WdlDraft1Parser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.expr_infix();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr_infix() {
	    let localctx = new Expr_infixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, WdlDraft1Parser.RULE_expr_infix);
	    try {
	        localctx = new Infix0Context(this, localctx);
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.expr_infix0(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr_infix0(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Expr_infix0Context(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 22;
	    this.enterRecursionRule(localctx, 22, WdlDraft1Parser.RULE_expr_infix0, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        localctx = new Infix1Context(this, localctx);
	        this._ctx = localctx;
	        _prevctx = localctx;

	        this.state = 178;
	        this.expr_infix1(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 185;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new LorContext(this, new Expr_infix0Context(this, _parentctx, _parentState));
	                this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix0);
	                this.state = 180;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 181;
	                this.match(WdlDraft1Parser.OR);
	                this.state = 182;
	                this.expr_infix1(0); 
	            }
	            this.state = 187;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	expr_infix1(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Expr_infix1Context(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 24;
	    this.enterRecursionRule(localctx, 24, WdlDraft1Parser.RULE_expr_infix1, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        localctx = new Infix2Context(this, localctx);
	        this._ctx = localctx;
	        _prevctx = localctx;

	        this.state = 189;
	        this.expr_infix2(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 196;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new LandContext(this, new Expr_infix1Context(this, _parentctx, _parentState));
	                this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix1);
	                this.state = 191;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 192;
	                this.match(WdlDraft1Parser.AND);
	                this.state = 193;
	                this.expr_infix2(0); 
	            }
	            this.state = 198;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	expr_infix2(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Expr_infix2Context(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 26;
	    this.enterRecursionRule(localctx, 26, WdlDraft1Parser.RULE_expr_infix2, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        localctx = new Infix3Context(this, localctx);
	        this._ctx = localctx;
	        _prevctx = localctx;

	        this.state = 200;
	        this.expr_infix3(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 222;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 220;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new EqeqContext(this, new Expr_infix2Context(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix2);
	                    this.state = 202;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 203;
	                    this.match(WdlDraft1Parser.EQUALITY);
	                    this.state = 204;
	                    this.expr_infix3(0);
	                    break;

	                case 2:
	                    localctx = new NeqContext(this, new Expr_infix2Context(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix2);
	                    this.state = 205;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 206;
	                    this.match(WdlDraft1Parser.NOTEQUAL);
	                    this.state = 207;
	                    this.expr_infix3(0);
	                    break;

	                case 3:
	                    localctx = new LteContext(this, new Expr_infix2Context(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix2);
	                    this.state = 208;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 209;
	                    this.match(WdlDraft1Parser.LTE);
	                    this.state = 210;
	                    this.expr_infix3(0);
	                    break;

	                case 4:
	                    localctx = new GteContext(this, new Expr_infix2Context(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix2);
	                    this.state = 211;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 212;
	                    this.match(WdlDraft1Parser.GTE);
	                    this.state = 213;
	                    this.expr_infix3(0);
	                    break;

	                case 5:
	                    localctx = new LtContext(this, new Expr_infix2Context(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix2);
	                    this.state = 214;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 215;
	                    this.match(WdlDraft1Parser.LT);
	                    this.state = 216;
	                    this.expr_infix3(0);
	                    break;

	                case 6:
	                    localctx = new GtContext(this, new Expr_infix2Context(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, WdlDraft1Parser.RULE_expr_infix2);
	                    this.state = 217;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 218;
	                    this.match(WdlDraft1Parser.GT);
	                    this.state = 219;
	                    this.expr_infix3(0);
	                    break;

	                } 
	            }
	            this.state = 224;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}

